backend-prod/be-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-cilist-prod
  namespace: production
  labels:
    app: be-cilist-prod
    name: be-cilist-prod
    keel.sh/policy: major
    keel.sh/trigger: poll  
spec:
  selector:
    matchLabels:
      app: be-cilist-prod
  replicas: 2
  template:
    metadata:
      labels:
        app: be-cilist-prod
    spec:
      containers:
      - name: be-cilist-prod
        image: ramses01/cilist-backend:0.0.1-master
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-be-cilist-prod
  namespace: staging
spec:
  selector:
    app: be-cilist-prod
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
